# douyinApi

./: index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
data/: douyin_accounts.db
data/cookies/: douyin_88170904406.json  douyin_account_312857aaabcb.json  douyin_account_5576090f9e27.json
data/module/touchsprite/: README.txt  classes.txt  data.yaml
data/module/touchsprite/model.mlpackage/: Manifest.json
data/module/touchsprite/model.mlpackage/Data/com.apple.CoreML/: model.mlmodel
douyin_api/: __init__.py  account_store.py  app.py  guest_cookie.py  login.py  sec_uid_resolver.py  server.py  status_checker.py
frontend/src/: main.tsx  styles.css
tests/: test_account_store.py  test_api.py  test_guest_cookie.py  test_login.py  test_sec_uid_resolver.py
